[tool.poetry]
authors = ["MIT Data To AI Lab"]
description = "Explanation tool for machine learning"
license = "MIT"
name = "sibyl-api"
packages = [{include = "sibyl_api"}]
readme = "README.md"
version = "0.1.0"

repository = "https://github.com/DAI-Lab/sibyl-api"

keywords = ["sibyl-api", "sibyl", "api"]

classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
click = "^8.1.3"
python = "^3.8"

[tool.poetry.group.general.dependencies]
PyYAML= "^6.0"
passlib= "^1.7.4"
termcolor = "^2.0.1"

[tool.poetry.group.math.dependencies]
numpy= "^1.23.3"
pandas= "^1.5.0"

[tool.poetry.group.web-server.dependencies]
Flask = "2.2.2"
Flask-Cors = "3.0.10"
Flask-RESTful = "0.3.9"
Werkzeug = "2.2.2"
flasgger = "0.9.5"
gevent = "21.12.0"
greenlet = "1.1.3"

[tool.poetry.group.database.dependencies]
mongoengine = "^0.24.2"
pymongo = "^4.2.0"

[tool.poetry.group.explanations.dependencies]
#pyreal = "==0.1.0.dev0"

[tool.poetry.group.dev.dependencies]
coverage = ">=6.5.0"
invoke = ">=1.7.3"
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"

# docs
m2r2 = ">=0.3.3"
Sphinx = ">=5.2.3"

# Style Dependencies
flake8 = "^3.9.2"
isort = "^5.9.3"
black = "^22.8.0"

[tool.isort]
include_trailing_comment = true
line_length = 99
lines_between_types = 0
multi_line_output = 4
not_skip = "__init__.py"
use_parentheses = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
