[tool.poetry]
authors = ["MIT Data To AI Lab"]
description = "Explanation tool for machine learning"
license = "MIT"
name = "sibyl-api"
packages = [{include = "sibyl"}]
readme = "README.md"
version = "0.1.0"

repository = "https://github.com/DAI-Lab/sibyl-api"

keywords = ["sibyl-api", "sibyl", "api"]

classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]

[tool.poetry.scripts]
sibyl = "sibyl.cli:main"

[tool.poetry.dependencies]
# Main Python Requirements
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"

click = "^8.1.3"
pyyaml = "^6.0"
pyreal = "^0.4.7"
black = {extras = ["jupyter"], version = "^23.7.0"}
greenlet = "^2.0.2"
gevent = "^23.9.0.post1"
tqdm = "^4.66.1"
streamlit = {version = "^1.29.0", optional = true}

[tool.poetry.group.general.dependencies]
passlib = "^1.7.4"
termcolor = "^2.0.1"
xgboost = "0.90"

[tool.poetry.group.math.dependencies]
numpy = "^1.23.3"
pandas = "^1.5.0"

[tool.poetry.group.web-server.dependencies]
Flask = "2.2.2"
Flask-Cors = "3.0.10"
Flask-RESTful = "0.3.9"
Werkzeug = "2.2.2"
flasgger = "0.9.5"

[tool.poetry.group.database.dependencies]
mongoengine = "^0.24.2"
pymongo = "^4.2.0"

[tool.poetry.group.dev.dependencies]
coverage = ">=6.5.0"
invoke = ">=1.7.3"
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"
jupyter = ">=1.0.0"
nbmake = "^1.4.1"

# docs
m2r2 = ">=0.3.3"
Sphinx = ">=5.2.3"

# Style Dependencies
flake8 = "^5.0.4"
isort = "^5.11.4"
black = "^23.1.0"

[tool.poetry.group.setup]
optional = true

[tool.poetry.group.setup.dependencies]
streamlit = "^1.29.0"
ruamel-yaml = "^0.18.5"

[tool.black]
line-length = 99
preview = true

[tool.isort]
profile = "black"
line_length = 99
skip = ["__init__.py"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
